objects/Amendment__c.object
<CustomObject>
    <description>Used by C&amp;I to record loan amendments</description>
    <fields>
        <fullName>Additional_Fees_Changes__c</fullName>
        <label>Additional Fee(s) Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Fees__c</fullName>
        <label>Additional Fee(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Fields_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true/false based on workflow rules that determine if all required fields for approval are populated</description>
        <label>Approval Fields Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Intended to be hidden field that is set during approval process and displayed in related lists/reports</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>By1_Title__c</fullName>
        <formula>By1__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>By 1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>By1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>By 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By2_Title__c</fullName>
        <formula>By2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>By 2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>By 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Changes__c</fullName>
        <label>Collateral Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Options_Changes__c</fullName>
        <label>Extension Option(s) Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Options__c</fullName>
        <label>Extension Option(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_Types_Changes__c</fullName>
        <label>Guarantor Type(s) Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_Types__c</fullName>
        <label>Guarantor Type(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guarantors_Changes__c</fullName>
        <label>Guarantor(s) Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantors__c</fullName>
        <label>Guarantor(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Changes__c</fullName>
        <label>Loan Amount Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Structure_Changes__c</fullName>
        <label>Loan Structure Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Structure__c</fullName>
        <label>Loan Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multi Draw Term</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The parent Opportunity must be in a Closed Won stage before an Amendment can be created</errorMessage>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed Won</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Changes__c</fullName>
        <label>Other Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RE__c</fullName>
        <label>RE</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Changes__c</fullName>
        <label>Rate Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary_Recommendation__c</fullName>
        <label>Summary &amp; Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Supporting_Analysis__c</fullName>
        <label>Supporting Analysis</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Term_Changes__c</fullName>
        <label>Term Changes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Recap__c</fullName>
        <label>Transaction Recap</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <label>Amendment</label>
    <nameField>
        <displayFormat>AMEND-{YYYYMMDD}-{000}</displayFormat>
        <label>Amendment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>